--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,15 @@ bower_components
 build/Release
 
 # Dependency directories
+server/node_modules/
+client/node_modules/
 node_modules/
 jspm_packages/
+
+# Compiled files
+/dist
+/server/dist
+/client/build
 
 # TypeScript v1 declaration files
 typings/
